Fixing scrollbar spacing issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -447,6 +447,7 @@ $collapseHoverColor: #353535;
     max-height: 150px !important;
     width: 220px !important;
     overflow-y: auto !important;
+    padding-right: 5px !important;
 }
 
 .glimpse-hud-field-listing {
